# mschol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  issues.md
examples/: CMakeLists.txt  anidiff.cc  anidiff2.cc  mat2cv.cc  solve_problem_2d.cc  solve_problem_3d.cc
makefiles/: I.dmat  Ujj.mat  run_anidiff.sh  run_anidiff2.sh  run_chol_odw.mk  run_problem_2d.sh  run_problem_3d.sh
result/ichol-2021-10-07-21-14-55/patt-1e5-1e1/prb-laplacian/prec-amg/RAND08/ani-regular-9/rho-00/: config.json  log.txt  point-level-0.vtk  point-level-2.vtk  point-level-3.vtk  point-level-4.vtk  point-level-5.vtk  point-level-6.vtk
result/ichol-2021-10-07-21-14-55/patt-1e5-1e1/prb-laplacian/prec-ichol/RAND08/ani-regular-9/rho-07.0/: log.txt  point-level-1.vtk
result/ichol-2021-10-11-09-11-54/patt-1e5-1e1/prb-laplacian/prec-amg/RAND08/anidiff2-regular-9/rho-00/: config.json  err.txt  log.txt
result/ichol-2021-10-11-09-11-54/patt-1e5-1e1/prb-laplacian/prec-ichol/RAND08/anidiff2-regular-9/rho-07.0/: config.json  err.txt  log.txt
src/: CMakeLists.txt  chol_hierarchy.cc  chol_hierarchy.h  cholesky.cc  cholesky.h  cholesky_level.cc  cholesky_level.h  elas.c  ichol.h  ichol_pattern.h  io.cc  io.h  macro.h  pcg.cc  pcg.h  ptree.cc  ptree.h  supernode.cc  supernode.h  timer.h  types.h  util.h  visual.h  volume.h
